Fix responsive issue on mobile

--- a/assets/scss/partials/article.scss
+++ b/assets/scss/partials/article.scss
@@ -14,6 +14,8 @@
 
         transition: box-shadow 0.3s ease;
 
+
+
         &:hover {
             box-shadow: var(--shadow-l4);
         }
@@ -44,6 +46,7 @@
 
         .article-image {
             width: 30%;
+            min-width: 10em;
 
             img {
                 padding: 1em;
